index.html and style.css edits

--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
   <h3>Beast</h3>
   <p>REMAKE OF DAN BAKER’S ORIGINAL 1984 ARCADE GAME, WRITTEN IN JAVASCRIPT TO BE PLAYED IN THE MODERN WEB BROWSER.</p>
   <p>Move blocks to crush the enemy ‘H’ beasts before they make a meal out of you.</p>
-  <a href="https://github.com/robertprovine.io">Link to project</a>
+  <a target="_blank" href="http://zoo-keeper-jury-86482.bitballoon.com/">Link to project</a>
  
   <h3>Data-Bot</h3>
-  <p>A DATABASE APPLICATION CREATOR, BUILT WITH NODE AND EXPRESS. Create a database by adding custom tables and columns, then download a generated zip file of a fully functioning MVC Express application, with a folder structure similar to a Rails application.</p>
-  <a href="https://robertprovine.github.io">Link to project</a>
+  <p>A DATABASE APPLICATION CREATOR, BUILT WITH NODE AND EXPRESS.</p>
+  <p>Create a database by adding custom tables and columns, then download a generated zip file of a fully functioning MVC Express application, with a folder structure similar to a Rails application.</p>
+  <a target="_blank" href="https://github.com/robertprovine/data-bot">Link to project</a>
  
   <h3>Hypertext-Control</h3>
-  <p>A MIDI CONTROLLED MOCKUP WEBSITE BUILDER, BUILT USING WEBPACK, BABEL, AND EXPRESS
-  Plug in the Behringer X-Touch MIDI controller via usb into the computer, load up the web app and start pushing buttons and turning knobs. In minutes, you'll have yourself a mockup of a fully styled web page that you can download as a starting template before writing a single line of HTML/CSS/JavaScript code.</p>
-  <a href="https://github.com/robertprovine/hypertext-control">Link to project</a>
+  <p>A MIDI CONTROLLED MOCKUP WEBSITE BUILDER, BUILT USING WEBPACK, BABEL, AND EXPRESS</p>
+  <p>Plug in the Behringer X-Touch MIDI controller via usb into the computer, load up the web app and start pushing buttons and turning knobs. In minutes, you'll have yourself a mockup of a fully styled web page that you can download as a starting template before writing a single line of HTML/CSS/JavaScript code.</p>
+  <a target="_blank" href="https://github.com/robertprovine/hypertext-control">Link to project</a>
+
   <h3>Reaktor Map</h3>
-  <p>A REAKTOR MAP FILE GENERATOR</p>
-  <a href="https://github.com/robertprovine/reaktormap">Link to project</a>
+  <p>A REAKTOR SAMPLE MAP FILE GENERATOR</p>
+  <p>Generates a Native Instruments Reaktor sample map file, given a particular folder structure and naming conventions. Development involved reverse engineering the Reaktor sample map file format in a hex editor. It is much quicker to use this generator than to create sample maps manually in Reaktor.</p>
+  <a target="_blank" href="https://github.com/robertprovine/reaktormap">Link to project</a>
 </div>
 
   
