changes to index.html

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <a target="_blank" href="https://github.com/robertprovine/data-bot">Link to project</a>
  
   <h3>Hypertext-Control</h3>
-  <p>A MIDI CONTROLLED MOCKUP WEBSITE BUILDER, BUILT USING WEBPACK, BABEL, AND EXPRESS</p>
+  <p>A MIDI CONTROLLED MOCKUP WEBSITE BUILDER, BUILT USING WEBPACK, BABEL, AND EXPRESS.</p>
   <p>Plug in the Behringer X-Touch MIDI controller via usb into the computer, load up the web app and start pushing buttons and turning knobs. In minutes, you'll have yourself a mockup of a fully styled web page that you can download as a starting template before writing a single line of HTML/CSS/JavaScript code.</p>
   <a target="_blank" href="https://github.com/robertprovine/hypertext-control">Link to project</a>
 
   <h3>Reaktor Map</h3>
-  <p>A REAKTOR SAMPLE MAP FILE GENERATOR</p>
+  <p>A REAKTOR SAMPLE MAP FILE GENERATOR.</p>
   <p>Generates a Native Instruments Reaktor sample map file, given a particular folder structure and naming conventions. Development involved reverse engineering the Reaktor sample map file format in a hex editor. It is much quicker to use this generator than to create sample maps manually in Reaktor.</p>
   <a target="_blank" href="https://github.com/robertprovine/reaktormap">Link to project</a>
 </div>
